--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,4 @@
-{% if site.google_analytics %}
+<!-- {% if site.google_analytics %}
 <!-- Google Analytics -->
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -11,4 +11,14 @@
   ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
-{% endif %}
+{% endif %} -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CB2EWFTM9K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CB2EWFTM9K');
+</script>
